--- a/config.example.json
+++ b/config.example.json
@@ -1,6 +1,6 @@
 {
-  "apiKey": "REPLACE_WITH_YOUR_PUBLIC_API_KEY",
+  "apiKey": "AIzaSyDRvltw_jDHnShudRtXnayPcQGP4NaLs0Q",
   "folders": [
-    "YOUR_DRIVE_FOLDER_ID"
+    "1uaF2R_oJePLn2BeVbOkKc1y9-NW5MYAH"
   ]
 }
