--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "clientId": "465014084113-csjk55ee9mmq7kbb8a33b713q79gbt4q.apps.googleusercontent.com",
+  "apiKey": "AIzaSyDypDnWDrpMIdMCjO3GZ1WCXJe6FVTmGK0",
   "folders": [
     "1uaF2R_oJePLn2BeVbOkKc1y9-NW5MYAH"
   ]
