--- a/config.json
+++ b/config.json
@@ -1,6 +1,3 @@
 {
-  "apiKey": "AIzaSyDypDnWDrpMIdMCjO3GZ1WCXJe6FVTmGK0",
-  "folders": [
-    "1uaF2R_oJePLn2BeVbOkKc1y9-NW5MYAH"
-  ]
+  "apiBase": "https://api.reeses.ca"
 }
